--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-DATABASE_URL = "mongodb://localhost:27017/theogma"
+DATABASE_URL = "mongodb+srv://vivekyadavnitt:vivek112@cluster0.seugyd8.mongodb.net/theogma"
 ADMIN_JWT_SECRET = "admin_secret"
 SUPER_ADMIN_JWT_SECRET = "super_admin_secret"
 
