--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
@@ -10,5 +16,6 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.3",
     "zod": "^3.23.8"
-  }
+  },
+  "devDependencies": {}
 }
